--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   padding: 0;
   list-style: none;
   box-sizing: border-box;
-  /* border: 1px solid grey; */
+  border: 1px solid grey;
 }
 .Page {
   min-height: 100vh;
