--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -152,6 +152,7 @@
         font-size: 1.1rem;
         line-height: 2rem;
         letter-spacing: 1.2px;
+        margin-bottom: 1rem;
       }
       // 圖片
       .introductionImg {
