--- a/src/Styles/Layout.scss
+++ b/src/Styles/Layout.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   height: 100%;
-  // padding: 1rem 0;
+  // 左邊NavItem
   .leftNav {
     display: flex;
 
@@ -34,9 +34,7 @@
     a {
       text-decoration: none;
       .itemBtn {
-        // background-color: antiquewhite;
         font-size: 1rem;
-
         .icon {
           font-size: 1.6rem;
         }
@@ -48,7 +46,6 @@
 // Footer
 footer {
   background-color: #efefef;
-  // position: fixed;
   width: 100%;
   height: 160px;
   padding: 1rem 1.5rem;
