--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -77,7 +77,62 @@
       border: 1px solid white;
     }
   }
+
+  .newsCard {
+    position: relative;
+    display: flex;
+    height: 130px;
+    background: rgba(248, 182, 45, 0.54);
+    border-radius: 10px;
+    margin-bottom: 2rem;
+    padding: 1rem;
+    transition: 0.2s;
+    &:hover {
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      transform: translateY(-5px);
+    }
+
+    .typeImg {
+      width: 48px;
+      height: 48px;
+      margin-right: 2rem;
+      border-radius: 100%;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    .article {
+      width: 80%;
+      background-color: white;
+      padding: 0.5rem 1.5rem;
+      margin-right: 2rem;
+      border-radius: 10px;
+      h3 {
+        margin-bottom: 0.5rem;
+      }
+    }
+    button {
+      position: absolute;
+      bottom: 1rem;
+      right: 3%;
+      font-weight: 600;
+      font-size: 1.2rem;
+      color: white;
+      background-color: transparent;
+      transition: 0.2s;
+      border: none;
+      border-bottom: 2px solid white;
+      cursor: pointer;
+      &:hover {
+        letter-spacing: 1px;
+      }
+    }
+  }
 }
+
 // .swiper-wrapper
 @media (max-width: 768px) {
   .Page {
@@ -103,7 +158,24 @@
     }
 
     .newsCard {
-      height: 200px;
+      height: 150px;
+      margin-bottom: 1rem;
+      padding: 1rem;
+      transition: 0.2s;
+
+      .typeImg {
+        width: 40px;
+        height: 40px;
+        margin-right: 0.5rem;
+      }
+      .article {
+        width: 85%;
+        padding: 0.5rem;
+        margin-right: 0rem;
+      }
+      button {
+        display: none;
+      }
     }
   }
 }
@@ -111,9 +183,6 @@
   .Page {
     .title {
       margin-bottom: 1rem;
-    }
-    .Card {
-      height: 240px;
     }
   }
 }
